[GOHW-4]: fix
